# drum_synth

./: .gitignore  README.md  pyproject.toml
presets/: default_kick.json
src/drum_synth/: __init__.py  __main__.py
src/drum_synth/app/: main.py
src/drum_synth/audio/: __init__.py  playback.py  render.py
src/drum_synth/engine/: __init__.py  base.py  kick.py
src/drum_synth/presets/: __init__.py  io.py  schema.py
src/drum_synth/ui/: main_window.py
