[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drum-synth"
version = "0.1.0"
description = "Phase 0 scaffold for a modular desktop drum synthesizer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6",
  "numpy",
  "sounddevice",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
